--- a/.Archive/_coverpage.md/2021-03-29 22-12-32.md
+++ b/.Archive/_coverpage.md/2021-03-29 22-12-32.md
@@ -1,6 +1,6 @@
 # Anakin's Blog
-
-`无数渺小的思考，填满了人的一生`
-
+``无数渺小的思考，填满了人的一生
 [Start](post/)
 [Discuss](https://github.com/AnakinYang/AnakinYang.github.io/discussions/1)
+
+![](https://source.unsplash.com/random/)
