--- a/post/.Archive/欢迎.md/2021-03-29 22-24-52.md
+++ b/post/.Archive/欢迎.md/2021-03-29 22-24-52.md
@@ -11,7 +11,7 @@ Markdown.app 兼顾了简洁与强大，是一款非常棒的写作工具。
 进入 <act:禅模式> 开始写作，感受其独特魅力。你还可以 <act:选择背景 (禅模式)>，让书写的氛围融合于自己的心绪，同时，`禅模式` 默认会开启 **白噪音**，一切都恰到好处。
 
 禅模式，有很强的仪式感。Markdown.app 希望让写作者触碰键盘的气息，穿透过屏幕，就能被人类感受到。
-![](@resources/help_images/cn/zen_mode.jpg)
+![](@resources/help_images/cn/zen_mode.jpg)![](http://)
 
 ## 有用的词性分析
 **注意:** 我们先 <act:退出禅模式> ，不然会影响其它功能的呈现。
