--- a/.Archive/README.md/2021-04-02 17-30-42.md
+++ b/.Archive/README.md/2021-04-02 17-30-42.md
@@ -3,4 +3,4 @@
 <span id="jinrishici-sentence">正在加载今日诗词....</span>
 <script src="https://sdk.jinrishici.com/v2/browser/jinrishici.js" charset="utf-8"></script>
 
-![](_image/cover.jpg)
+- ![](./_image/2021-03-29/5XK1DVHzRmE.jpg)
