--- a/post/.Archive/README.md/2021-04-05 19-18-43.md
+++ b/post/.Archive/README.md/2021-04-05 19-18-43.md
@@ -10,7 +10,7 @@
 ### 随笔
 [片语](/post/片语.md)
 ### 其他
-[全文检索部署](/post/Recoll.md)
+[全文检索部署](/post/recoll.)
 [基本语法](/post/basic.md)
 [plantuml](/post/plantuml.md)
 [欢迎](/post/欢迎.md)
