--- a/post/.Archive/WhatAreYouLookingAt.md/2021-04-05 18-23-33.md
+++ b/post/.Archive/WhatAreYouLookingAt.md/2021-04-05 18-23-33.md
@@ -36,17 +36,4 @@
 
 ![](./_image/2021-04-04/2021-04-05-18-23-03.jpg)
 
-7. [The Absinthe Drinker (French: Le Buveur d'absinthe)  喝苦艾酒的人 1859 （Édouard Manet, 爱德华·马奈）](https://en.wikipedia.org/wiki/The_Absinthe_Drinker_(Manet_painting))
-
-![](./_image/2021-04-04/2021-04-05-18-23-41.jpg)
-
-8. [Le Déjeuner sur l'herbe (English: The Luncheon on the Grass)  草地上的午餐 1863 （Édouard Manet, 爱德华·马奈）](https://en.wikipedia.org/wiki/Le_D%C3%A9jeuner_sur_l%E2%80%99herbe)
-
-![](./_image/2021-04-04/2021-04-05-18-24-24.jpg)
-
-9. [Olympia 奥林匹亚 1863 （Édouard Manet, 爱德华·马奈）](https://en.wikipedia.org/wiki/Olympia_(Manet))
-
-![](./_image/2021-04-04/2021-04-05-18-25-08.jpg)
-
-## 第三章
-
+7. [The Absinthe Drinker (French: Le Buveur d'absinthe)  喝苦艾酒的人 1859 （Édouard Manet, 爱德华·马奈）](https://en.wikipedia.org/wiki/The_Absinthe_Drinker_(Manet_painting)
