--- a/post/.Archive/WhatAreYouLookingAt.md/2021-04-05 18-24-43.md
+++ b/post/.Archive/WhatAreYouLookingAt.md/2021-04-05 18-24-43.md
@@ -44,9 +44,5 @@
 
 ![](./_image/2021-04-04/2021-04-05-18-24-24.jpg)
 
-9. [Olympia 奥林匹亚 1863 （Édouard Manet, 爱德华·马奈）](https://en.wikipedia.org/wiki/Olympia_(Manet))
-
-![](./_image/2021-04-04/2021-04-05-18-25-08.jpg)
-
-## 第三章
-
+9. Olympia 奥林匹亚 1863 （Édouard Manet, 爱德华·马奈）
+https://en.wikipedia.org/wiki/Olympia_(Manet)
